--- a/app/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/app/src/main/res/layout/activity_dashboard.xml
@@ -29,10 +29,10 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.65">
+        app:layout_constraintVertical_bias="0.808">
 
         <TextView
             android:id="@+id/textView3"
@@ -41,6 +41,12 @@
             android:text="Groups"
             android:textAlignment="center"
             android:textSize="30sp" />
+
+        <ListView
+            android:id="@+id/listview_chats"
+            android:layout_width="match_parent"
+            android:layout_height="508dp" />
+
 
     </LinearLayout>
 
@@ -56,7 +62,7 @@
         app:layout_constraintHorizontal_bias="0.065"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.056" />
 
     <!--        app:layout_constraintVertical_bias="0.023" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
