--- a/app/app/src/main/res/layout/customchat.xml
+++ b/app/app/src/main/res/layout/customchat.xml
@@ -5,11 +5,10 @@
 
     <ImageView
         android:id="@+id/imgVwProfile"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|bottom"
+        android:layout_width="64dp"
+        android:layout_height="102dp"
         android:layout_weight="1"
-        android:src="@drawable/profileimg" />
+        android:src="@drawable/profilepic2" />
 
     <LinearLayout
         android:layout_width="147dp"
@@ -22,14 +21,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text=""
+            android:layout_marginBottom="12dp"
+            android:text="Name"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
 
         <TextView
             android:id="@+id/txtVwMessage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="56dp"
             android:ems="10"
             android:inputType="textPersonName" />
 
