--- a/app/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/app/src/main/res/layout/activity_dashboard.xml
@@ -39,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:text="Groups"
+            android:fontFamily="monospace"
             android:textAlignment="center"
             android:textSize="30sp" />
 
