--- a/app/app/src/main/res/layout/activity_all_chat.xml
+++ b/app/app/src/main/res/layout/activity_all_chat.xml
@@ -30,6 +30,20 @@
         app:layout_constraintHorizontal_bias="0.435"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.041" />
+        app:layout_constraintVertical_bias="0.1" />
+
+    <ImageButton
+        android:id="@+id/imgBtnAddGroup"
+        android:layout_width="60dp"
+        android:layout_height="62dp"
+        android:background="@drawable/addbutton"
+        android:src="@drawable/settings"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.935"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.056" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
